workspace = { members = ["app"] }

[package]
name = "pic-scale-safe"
version = "0.1.6"
edition = "2021"
description = "Fast and safe performance image scaling"
readme = "README.md"
keywords = ["scale", "resize", "image-resize"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/pic-scale-safe"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/pic-scale-safe"
repository = "https://github.com/awxkee/pic-scale-safe"
exclude = ["*.jpg", "/assets", "*.png", "*.sh"]

[dependencies]
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }

[features]
default = []
rayon = ["dep:rayon"]