[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.2", default-features = false }
pic-scale-safe = {path = "../", features = []}
fast_image_resize = { version = "5.0.0", features = [] }

[dev-dependencies]
criterion = "0.5.1"
image = { version = "0.25.2", features = ["default"] }
fast_image_resize = { version = "5.0.0", features = [] }

[[bench]]
name = "resize_rgb"
harness = false

[[bench]]
name = "resize_rgba"
harness = false

[[bench]]
name = "resize_la"
harness = false

[[bench]]
name = "resize_plane"
harness = false

[[bench]]
name = "resize_rgba_u16"
harness = false

[[bench]]
name = "resize_rgb_u16"
harness = false

[[bench]]
name = "resize_rgba_f32"
harness = false

[[bench]]
name = "resize_rgb_f32"
harness = false
