[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.2", default-features = true }
pic-scale-safe = {path = "../", features = []}
fast_image_resize = { version = "6.0.0", features = [] }
resize = "0.8.8"
bytemuck = "1.25.0"

[dev-dependencies]
criterion = "0.8.2"
image = { version = "0.25.2", features = ["default"] }
fast_image_resize = { version = "6.0.0", features = [] }

[[bench]]
name = "resize_rgb"
harness = false

[[bench]]
name = "resize_rgba"
harness = false

[[bench]]
name = "resize_la"
harness = false

[[bench]]
name = "resize_plane"
harness = false

[[bench]]
name = "resize_rgba_u16"
harness = false

[[bench]]
name = "resize_rgb_u16"
harness = false

[[bench]]
name = "resize_rgba_f32"
harness = false

[[bench]]
name = "resize_rgb_f32"
harness = false
